--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1,7 +1,7 @@
 ﻿﻿.delimeter{/* delimitador da barra com a logo*/
-  float: none;
-  width: 9%;
-  width: 100%;;
+  height: 100px;
+  width: 100%;
+  
 }
 .barra{ /*barra com a logo*/
     background-color:white;
@@ -2324,8 +2324,9 @@ form button{
 }
 
 
-@media only screen and (min-width: 1024px)and (max-width:1100px){
+@media only screen and (min-width: 1024px)and (max-width:1300px){
 
+ 
 
 
   .barra2_filho{
@@ -2573,7 +2574,38 @@ form button{
       bottom:5px;
     }
 }
+@media only screen and (max-width: 1500px){
 
+ 
+
+  .father{
+    width: 100%;
+    padding: 15px 30px;
+  }
+
+  .moz{
+    width: 50%;
+  }
+  
+  .one{
+    
+    float: left;
+   
+  }
+  .one h1{
+    font-size: 16px;
+    
+  }
+
+  .two{
+    float: right;
+  }
+
+  
+  
+
+  
+}
 
 
 
