--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -2576,7 +2576,6 @@ form button{
 }
 @media only screen and (max-width: 1500px){
 
- 
 
   .father{
     width: 100%;
@@ -2606,7 +2605,92 @@ form button{
 
   
 }
+@media only screen and (min-width: 1200px){
+  .button_back,.modo-noturno,.search{
+    display:none;
+  }
+  
+  div.tec1{
+    transform:translateX(50%);
+    left:0%;
+    
 
+  }
+  .show{
+    display:block;
+    width: 50%;
+    float:left;
+    margin-top:15px;
+    margin-bottom:10px;
+    background-color: #fafcfd;       
+    font-size: 18px;
+    font-weight:normal;
+    font: 400 16px Arial;
+    height:40px;
+    box-sizing: border-box;
+    color:gray;
+    padding:8px 16px 8px 48px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom:2px;
+    border:1px solid  rgb(195, 195, 195);
+  
+  }
+  .show:focus{
+    border: 1px solid blue ;
+    outline: 3px solid rgba(52,144,220,.5);
+  
+  }
+  .show:focus~.search-box{
+    display: block;
+  }
+  input::placeholder{
+    color:#b8c2cb;
+    font-size:16px;
+    font-weight: normal;
+  
+  }
+ .img_bar{
+  display:block;
+  position: absolute;
+  bottom: 20px;
+  right:5%;
+  }
+  .search-box{
+    position: absolute;
+    width: 50%;
+    left: 50%;
+    background-color: white;
+    transform:translateX(-47%);
+    top: 98%;
+    border-radius: 2px;
+    border: 1px solid lightgray;
+    color: #575757;
+    font:16px  Source Sans Pro,sans-serif;
+  }
+  .search-box p{
+    font-weight: bold;
+    margin: 0px;
+   
+  }
+  
+  .em_alta{
+    padding: 12px 16px;
+    border-top: 1px solid lightgray;
+  }
+  .em_alta:hover{
+    background-color:  #fafcfd;;
+
+  }
+  .box-title{
+    padding: 14px 16px;
+  }
+  .lup{
+   position: relative;
+   top:6px;
+  }
+}
 
 
 
