--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -500,7 +500,7 @@ input[type=checkbox]:checked + .page  .reactions  input[type=radio]:checked + .r
     color:rgba(82,82,82,.5);
   }
 .artigo{
-  float: none;
+  
   width:100%;
   background-color:inherit; 
   margin: -20px auto 0px auto;
@@ -1547,6 +1547,10 @@ form button{
      right: 47px;
    }
 
+   .barra2{
+     width:100%;
+   }
+
   .barra2_filho{
     font-size: 18px;
     left:20px;
@@ -1676,6 +1680,37 @@ form button{
   }
 
 
+  .father{
+    flex-direction: column;
+    width: 100%;
+    font-size: 18px;
+
+  }
+
+  .moz{
+    padding: 10px;
+  }
+
+  .moz, .moz img{
+    width: 100%;
+   
+  }
+
+  .moz p{
+    font-weight: bold;
+  }
+
+  .one img{
+    height: 200px;
+  }
+
+  
+  
+  
+  
+
+ 
+
 }
 
 @media only screen and (min-width: 401px)and (max-width:500px){
@@ -1800,6 +1835,30 @@ form button{
     opacity: 0%;
   }
 
+  .father{
+    flex-direction: column;
+    width: 100%;
+    font-size: 20px;
+
+  }
+
+  .moz{
+    padding: 10px;
+  }
+
+  .moz, .moz img{
+    width: 100%;
+   
+  }
+
+  .moz p{
+    font-weight: bold;
+  }
+
+  .one img{
+    height: 200px;
+  }
+
 }
 
 
@@ -1912,9 +1971,31 @@ form button{
  .publish{
   width: 170px;
   font-size: 13px;
- 
-  
  }
+
+ .father{
+  flex-direction: column;
+  width: 100%;
+  font-size: 20px;
+
+}
+
+.moz{
+  padding: 10px;
+}
+
+.moz, .moz img{
+  width: 100%;
+ 
+}
+
+.moz p{
+  font-weight: bold;
+}
+
+.one img{
+  height: 250px;
+}
 
 }
 
@@ -2038,6 +2119,31 @@ form button{
   width: 200px;
  }
 
+ .father{
+  flex-direction: column;
+  width: 100%;
+  font-size: 20px;
+
+}
+
+.moz{
+  padding: 10px;
+}
+
+.moz, .moz img{
+  width: 100%;
+ 
+}
+
+.moz p{
+  font-weight: bold;
+}
+
+.one img{
+  height: 265px;
+}
+
+
 }
 
 @media only screen and (min-width: 701px)and (max-width:800px){
@@ -2052,7 +2158,7 @@ form button{
    }
 
   .barra2_filho{
-    font-size: 19px;
+    font-size: 26px;
     width: 80%;
     width:60%;
   }
@@ -2160,6 +2266,29 @@ form button{
    left: 140px;
    
  }
+ .father{
+  flex-direction: column;
+  width: 100%;
+  font-size: 28px;
+
+}
+
+.moz{
+  padding: 10px;
+}
+
+.moz, .moz img{
+  width: 100%;
+ 
+}
+
+.moz p{
+  font-weight: bold;
+}
+
+.one img{
+  height: 300px;
+}
 
 }
 
@@ -2174,9 +2303,13 @@ form button{
      right: 55px;
    }
 
+   .barra2{
+     width: 95%;
+   }
+
   .barra2_filho{
     font-size: 19px;
-    width: 80%;
+    width: 65%;
   }
   
   .barra_autor button{
@@ -2241,6 +2374,29 @@ form button{
     position: relative;
     left: 150px;
     
+  }
+  .father{
+    flex-direction: column;
+    width: 100%;
+    font-size: 20px;
+  
+  }
+  
+  .moz{
+    padding: 10px;
+  }
+  
+  .moz, .moz img{
+    width: 100%;
+   
+  }
+  
+  .moz p{
+    font-weight: bold;
+  }
+  
+  .one img{
+    height: 310px;
   }
 
 
@@ -2321,10 +2477,34 @@ form button{
     left: 150px;
   }
 
+  .father{
+    flex-direction: column;
+    width: 100%;
+    font-size: 20px;
+  
+  }
+  
+  .moz{
+    padding: 10px;
+  }
+  
+  .moz, .moz img{
+    width: 100%;
+   
+  }
+  
+  .moz p{
+    font-weight: bold;
+  }
+  
+  .one img{
+    height: 310px;
+  }
+
 }
 
 
-@media only screen and (min-width: 1024px)and (max-width:1300px){
+@media only screen and (min-width: 1024px)and (max-width:1199px){
 
  
 
@@ -2376,6 +2556,30 @@ form button{
  .form{
   width: 75%;
  }
+ .father{
+  flex-direction: column;
+  width: 100%;
+  font-size: 29px;
+
+}
+
+.moz{
+  padding: 10px;
+}
+
+.moz, .moz img{
+  width: 100%;
+ 
+}
+
+.moz p{
+  font-weight: bold;
+}
+
+.one img{
+  height: 350px;
+}
+
 }
 @media only screen and (max-width:1000px){
   div.share_text{
@@ -2574,37 +2778,7 @@ form button{
       bottom:5px;
     }
 }
-@media only screen and (max-width: 1500px){
 
-
-  .father{
-    width: 100%;
-    padding: 15px 30px;
-  }
-
-  .moz{
-    width: 50%;
-  }
-  
-  .one{
-    
-    float: left;
-   
-  }
-  .one h1{
-    font-size: 16px;
-    
-  }
-
-  .two{
-    float: right;
-  }
-
-  
-  
-
-  
-}
 @media only screen and (min-width: 1200px){
   .button_back,.modo-noturno,.search{
     display:none;
@@ -2690,6 +2864,71 @@ form button{
    position: relative;
    top:6px;
   }
+
+  .father{
+    width: 100%;
+    display: flex;
+    padding-left: 10px;
+    
+  }
+
+  .moz{
+  
+    padding: 10px 5px;
+    overflow: hidden;
+    
+  }
+  
+  
+  .one{
+    float: left;
+    cursor: pointer;
+    width: 60%;
+  }
+
+  .one p{
+    font-size: 30px;
+    color:black;
+    font-weight: bold;
+  }
+
+  .one img{
+    border-radius: 8px;
+  }
+
+  .two{
+    float: right;
+    width: 40%;  
+  }
+
+  .news{
+    line-height: 70%;
+    position: relative;
+    padding-bottom: 10px;
+    cursor: pointer;
+  }
+
+  .news img{
+    max-width: 165px;
+    max-height:180px;
+    border-radius: 10%;
+  }
+
+  .news p{
+    color: black; 
+    font-size: 16px;
+    position: absolute;
+    top:20%;
+    left: 180px;
+    font-weight: bold;
+  }
+
+  .news p:hover, .one h1:hover{
+    color: rgb(31, 159, 238);
+  }
+
+
+  
 }
 
 
